feat: add assets and create footer/header

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/html-quotes": "double"
+      "vue/html-quotes": 1
     }
   },
   "browserslist": [
